# semdiff

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  git.rs  index.rs  lib.rs  main.rs
src/ast/: call_refs.rs  language.rs  mod.rs  parser.rs  query.rs  symbol.rs
src/diff/: body_diff.rs  change.rs  classifier.rs  cross_file.rs  intent.rs  matcher.rs  mod.rs
src/llm/: client.rs  mod.rs  prompt.rs  review.rs
src/output/: json.rs  text.rs
src/repo/: call_graph.rs  impact.rs  mod.rs  similarity.rs
src/tui/: app.rs  mod.rs  theme.rs
src/tui/panels/: detail.rs  impact.rs  mod.rs  review.rs  sidebyside.rs  summary.rs
